--- a/processa_captura_noticias.ipynb
+++ b/processa_captura_noticias.ipynb
@@ -19,32 +19,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "id": "d5cac40d",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/danielsaraivaleite/opt/anaconda3/lib/python3.9/site-packages/pandas/core/computation/expressions.py:21: UserWarning: Pandas requires version '2.8.4' or newer of 'numexpr' (version '2.8.3' currently installed).\n",
-      "  from pandas.core.computation.check import NUMEXPR_INSTALLED\n",
-      "/Users/danielsaraivaleite/opt/anaconda3/lib/python3.9/site-packages/pandas/core/arrays/masked.py:60: UserWarning: Pandas requires version '1.3.6' or newer of 'bottleneck' (version '1.3.5' currently installed).\n",
-      "  from pandas.core import (\n",
-      "/Users/danielsaraivaleite/opt/anaconda3/lib/python3.9/site-packages/scipy/__init__.py:155: UserWarning: A NumPy version >=1.18.5 and <1.25.0 is required for this version of SciPy (detected version 1.26.4\n",
-      "  warnings.warn(f\"A NumPy version >={np_minversion} and <{np_maxversion}\"\n",
-      "[nltk_data] Downloading package rslp to\n",
-      "[nltk_data]     /Users/danielsaraivaleite/nltk_data...\n",
-      "[nltk_data]   Package rslp is already up-to-date!\n",
-      "[nltk_data] Downloading package punkt to\n",
-      "[nltk_data]     /Users/danielsaraivaleite/nltk_data...\n",
-      "[nltk_data]   Package punkt is already up-to-date!\n",
-      "[nltk_data] Downloading package stopwords to\n",
-      "[nltk_data]     /Users/danielsaraivaleite/nltk_data...\n",
-      "[nltk_data]   Package stopwords is already up-to-date!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import warnings\n",
     "import pandas as pd\n",
@@ -59,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "id": "f1f1ebec",
    "metadata": {
     "scrolled": false
@@ -70,26 +48,12 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "2024-03-06 13:44:31.053078 Buscando empresa amazonas energia\n",
-      "...... buscando no google amazonas+energia\n",
-      "2024-03-06 13:45:09.284784 ... noticias encontradas: 90\n",
-      "2024-03-06 13:45:09.297826 ... noticias novas: 90\n",
-      "2024-03-06 13:48:11.993176 ... textos buscados: 79\n",
-      "2024-03-06 13:48:23.070738 ... novas noticias após filtros: 79\n",
-      "\n",
-      "2024-03-06 13:48:24.770636 Buscando empresa edp brasil\n",
-      "...... buscando no google edp+brasil\n",
-      "2024-03-06 13:49:00.925544 ... noticias encontradas: 131\n",
-      "2024-03-06 13:49:00.934042 ... noticias novas: 97\n",
-      "2024-03-06 13:53:02.439960 ... textos buscados: 90\n",
-      "2024-03-06 13:53:13.623849 ... novas noticias após filtros: 90\n",
-      "\n",
-      "2024-03-06 13:53:15.287446 Buscando empresa hapvida\n",
-      "...... buscando no google hapvida\n",
-      "2024-03-06 13:53:51.358566 ... noticias encontradas: 32\n",
-      "2024-03-06 13:53:51.370496 ... noticias novas: 7\n",
-      "2024-03-06 13:54:01.723072 ... textos buscados: 5\n",
-      "2024-03-06 13:54:02.299154 ... novas noticias após filtros: 5\n",
+      "2024-03-08 16:08:57.464610 Buscando empresa unigel\n",
+      "...... buscando no google unigel\n",
+      "2024-03-08 16:09:45.661436 ... noticias encontradas: 280\n",
+      "2024-03-08 16:09:45.667218 ... noticias novas: 265\n",
+      "2024-03-08 16:18:52.533914 ... textos buscados: 250\n",
+      "2024-03-08 16:19:22.286877 ... novas noticias após filtros: 250\n",
       "\n",
       "Captura concluída\n"
      ]
@@ -183,7 +147,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "49f8710f",
+   "id": "677ff916",
    "metadata": {},
    "outputs": [],
    "source": []
