--- a/processa_analise_sentimento.ipynb
+++ b/processa_analise_sentimento.ipynb
@@ -19,10 +19,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "id": "b9c5d7b9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/danielsaraivaleite/opt/anaconda3/lib/python3.9/site-packages/pandas/core/computation/expressions.py:21: UserWarning: Pandas requires version '2.8.4' or newer of 'numexpr' (version '2.8.3' currently installed).\n",
+      "  from pandas.core.computation.check import NUMEXPR_INSTALLED\n",
+      "/Users/danielsaraivaleite/opt/anaconda3/lib/python3.9/site-packages/pandas/core/arrays/masked.py:60: UserWarning: Pandas requires version '1.3.6' or newer of 'bottleneck' (version '1.3.5' currently installed).\n",
+      "  from pandas.core import (\n",
+      "/Users/danielsaraivaleite/opt/anaconda3/lib/python3.9/site-packages/scipy/__init__.py:155: UserWarning: A NumPy version >=1.18.5 and <1.25.0 is required for this version of SciPy (detected version 1.26.4\n",
+      "  warnings.warn(f\"A NumPy version >={np_minversion} and <{np_maxversion}\"\n",
+      "[nltk_data] Downloading package rslp to\n",
+      "[nltk_data]     /Users/danielsaraivaleite/nltk_data...\n",
+      "[nltk_data]   Package rslp is already up-to-date!\n",
+      "[nltk_data] Downloading package punkt to\n",
+      "[nltk_data]     /Users/danielsaraivaleite/nltk_data...\n",
+      "[nltk_data]   Package punkt is already up-to-date!\n",
+      "[nltk_data] Downloading package stopwords to\n",
+      "[nltk_data]     /Users/danielsaraivaleite/nltk_data...\n",
+      "[nltk_data]   Package stopwords is already up-to-date!\n"
+     ]
+    }
+   ],
    "source": [
     "import warnings\n",
     "import re\n",
@@ -49,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "id": "2d3e9497",
    "metadata": {},
    "outputs": [],
@@ -83,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "id": "5c32b37f",
    "metadata": {},
    "outputs": [],
@@ -104,15 +126,47 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dba7204d",
+   "id": "9d4761e9",
    "metadata": {},
    "source": [
-    "## Aplicação do CHAT GPT"
+    "## Aplicação de Filtros Léxicos"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
+   "id": "be682022",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = le_base_noticias_bruta_para_df()\n",
+    "\n",
+    "# filtros iniciais\n",
+    "\n",
+    "df = df[  (  (pd.isnull(df['noticia_selecionada']))   )  ]\n",
+    "df = df[~pd.isnull(df['texto_completo'])]\n",
+    "df = df[df['classificacao_ml'] != 'Outros']  \n",
+    "\n",
+    "# filtro lexico aplicados apenas as  novas noticias\n",
+    "df_filtrado = filtrar_noticias_pos_coleta_modelo_simplificado(df[pd.isnull(df['noticia_selecionada'])], df_empresas)\n",
+    "# salva o resultado do filtro por eficiencia (salva na base sem sentimentos por eficiencia)\n",
+    "# esse trecho permite que a rotina so seja aplicada a novas noticias futuramente, deixando proc. mais eficiente\n",
+    "df_original = le_base_noticias_bruta_para_df()\n",
+    "df_original['noticia_selecionada'] =  ( (df_original['noticia_selecionada']==1) |  df_original['hash'].isin(  df_filtrado['hash'].values  ) ).apply(lambda x: 1 if x else 0)\n",
+    "salva_base_noticias_bruta(df_original)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dba7204d",
+   "metadata": {},
+   "source": [
+    "## Aplicação do CHAT GPT e geração da base de saída"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "id": "195249eb",
    "metadata": {},
    "outputs": [
@@ -120,7 +174,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Realizadas 180 chamadas à API do GPT.\n",
+      "Realizadas 838 chamadas à API do GPT.\n",
       "Processamento concluído\n"
      ]
     }
@@ -151,35 +205,30 @@
     "# salva processamento na  base original\n",
     "salva_base_noticias_bruta(df)\n",
     "\n",
+    "# exclusoes manuais\n",
+    "exclusoes = pd.read_excel('datasets/exclusoes_julgamentais.xlsx')\n",
+    "df['classificacao_ml'] = df.apply(lambda row : 'Outros' if row['hash'] in list(exclusoes['hash']) else row['classificacao_ml'], axis=1)\n",
+    "df['classificacao'] = df.apply(lambda row : 'Outros' if row['hash'] in list(exclusoes['hash']) else row['classificacao'], axis=1)\n",
+    "df['noticia_selecionada'] = df.apply(lambda row : 0 if row['hash'] in list(exclusoes['hash']) else row['noticia_selecionada'], axis=1)\n",
+    "salva_base_noticias_bruta(df)\n",
     "\n",
-    "# faz os filtros\n",
-    "df = df[  (  (pd.isnull(df['noticia_selecionada']))  |  (df['noticia_selecionada'] ==1)  )  ]\n",
-    "df = df[~pd.isnull(df['texto_completo'])]\n",
-    "df = df[df['classificacao_ml'] != 'Outros']  \n",
     "\n",
-    "# tratando\n",
+    "# filtros que nao passou pelo classificador SVM bem pelo filtro lexico\n",
+    "df = df[df['noticia_selecionada']==1] \n",
+    "df = df[df['classificacao_ml']!='Outros'] \n",
+    "# filtro data\n",
+    "df = df[df['data_publicacao'] >= '2010-01-01']\n",
+    "\n",
+    "\n",
+    "# abre as respostas em colunas\n",
     "df = gera_colunas_gpt(df, coluna_resposta_gpt='gpt_resposta_completa')\n",
     "df = filtros_pos_gpt(df)\n",
     "df['polaridade'] = df['gpt_polaridade']  # substitui metodo anterior\n",
-    "# resumos vazios\n",
-    "df['gpt_resumo'] = df.apply(lambda row: row['titulo'] if pd.isnull(row['gpt_resumo']) else row['gpt_resumo'] , axis=1)\n",
     "\n",
+    "# trata resumos vazios colocando titulo no lugar\n",
+    "df['gpt_resumo'] = df.apply(lambda row: row['titulo'] if pd.isnull(row['gpt_resumo']) else row['gpt_resumo'] , axis=1)\n",
     "df['gpt_lista_respostas'] = df['gpt_lista_respostas'].astype(str)  # para permitir remover duplicatas\n",
     "\n",
-    "# filtro lexico aplicados apenas as  novas noticias\n",
-    "df_filtrado = filtrar_noticias_pos_coleta_modelo_simplificado(df[pd.isnull(df['noticia_selecionada'])], df_empresas)\n",
-    "\n",
-    "# salva o resultado do filtro por eficiencia (salva na base sem sentimentos por eficiencia)\n",
-    "# esse trecho permite que a rotina so seja aplicada a novas noticias futuramente, deixando proc. mais eficiente\n",
-    "df_original = le_base_noticias_bruta_para_df()\n",
-    "df_original['noticia_selecionada'] =  ( (df_original['noticia_selecionada']==1) |  df_original['hash'].isin(  df_filtrado['hash'].values  ) ).apply(lambda x: 1 if x else 0)\n",
-    "salva_base_noticias_bruta(df_original)\n",
-    "###\n",
-    "\n",
-    "\n",
-    "# aplica o filtro na base ja com sentimentos\n",
-    "df['noticia_selecionada'] =  ( (df['noticia_selecionada']==1) |  df['hash'].isin(  df_filtrado['hash'].values  ) ).apply(lambda x: 1 if x else 0)\n",
-    "df = df[df['noticia_selecionada']==1] \n",
     "\n",
     "# retira duplicatas\n",
     "df = df.drop_duplicates(['hash'], keep='first')\n",
@@ -198,7 +247,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6326228e",
+   "id": "e07e8432",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -206,7 +255,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "01fd6697",
+   "id": "12fb2d01",
    "metadata": {},
    "outputs": [],
    "source": []
