--- a/processa_captura_noticias.ipynb
+++ b/processa_captura_noticias.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "id": "d5cac40d",
    "metadata": {},
    "outputs": [],
@@ -32,12 +32,12 @@
     "import numpy as np\n",
     "from noticias_io import *\n",
     "\n",
-    "warnings.filterwarnings('ignore')"
+    "warnings.filterwarnings('ignore')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "f1f1ebec",
    "metadata": {
     "scrolled": false
@@ -48,14 +48,16 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "2024-03-08 16:08:57.464610 Buscando empresa unigel\n",
-      "...... buscando no google unigel\n",
-      "2024-03-08 16:09:45.661436 ... noticias encontradas: 280\n",
-      "2024-03-08 16:09:45.667218 ... noticias novas: 265\n",
-      "2024-03-08 16:18:52.533914 ... textos buscados: 250\n",
-      "2024-03-08 16:19:22.286877 ... novas noticias após filtros: 250\n",
+      "2024-03-10 22:36:48.627915 Buscando empresa irb brasil re\n",
+      "...... buscando no google irb brasil re\n",
       "\n",
-      "Captura concluída\n"
+      "2024-03-10 22:36:56.324426 Buscando apelido irb resseguros da empresa irb brasil re\n",
+      "...... buscando no google irb resseguros\n",
+      "\n",
+      "2024-03-10 22:37:28.717891 Buscando apelido IRBR3 da empresa irb brasil re\n",
+      "...... buscando no google IRBR3\n",
+      "2024-03-10 22:38:01.002439 ... noticias encontradas: 521\n",
+      "2024-03-10 22:38:01.013828 ... noticias novas: 444\n"
      ]
     }
    ],
@@ -72,6 +74,8 @@
     "    \n",
     "    aplicar_filtros= ( (not pd.isnull(row['aplicar_filtros_relevancia'])) and   row['aplicar_filtros_relevancia'].upper() == 'SIM')\n",
     "    inclui_apenas_nome_empresa = ( (not pd.isnull(row['tipo_busca_exaustiva'])) and    row['tipo_busca_exaustiva'].upper() == 'SIM')\n",
+    "    buscar_apelidos= ( (not pd.isnull(row['buscar_apelidos'])) and   row['buscar_apelidos'].upper() == 'SIM')\n",
+    "    \n",
     "    \n",
     "    atualiza = (  (not pd.isnull(row['tipo_busca_atualizacao'])) and    row['tipo_busca_atualizacao'].upper() == 'SIM' and (not pd.isnull(row['ultima_data_publicacao'])))\n",
     "    ultima_data = row['ultima_data_publicacao'].date()\n",
@@ -80,10 +84,22 @@
     "    dfEmpresasListadas = df_empresas\n",
     "    \n",
     "    df1 = busca_noticias_google_esg(empresa, atualiza=atualiza, ultima_data = ultima_data, inclui_apenas_nome_empresa = inclui_apenas_nome_empresa)\n",
-    "    \n",
+    "    # verifica se faz a busca por apelidos tambem (ex banco do brasil > BB)\n",
+    "    if buscar_apelidos and (not pd.isnull(row['apelidos'])):\n",
+    "        for apelido in row['apelidos'].split(','):\n",
+    "            print('\\n' +  str(dt.datetime.now())  + ' Buscando apelido ' + apelido + \" da empresa \" + empresa)\n",
+    "            df1_apelido = busca_noticias_google_esg(apelido, atualiza=atualiza, ultima_data = ultima_data, inclui_apenas_nome_empresa = inclui_apenas_nome_empresa)\n",
+    "\n",
+    "            if df1_apelido is not None and len(df1_apelido) >0:\n",
+    "                if df1 is not None and len(df1) > 0:\n",
+    "                    df1 = pd.concat([df1,df1_apelido]).drop_duplicates(ignore_index=True)\n",
+    "                else:\n",
+    "                    df1 = df1_apelido\n",
+    "        \n",
     "    if len(df1) >0:\n",
     "        # ajustes\n",
     "        #df1['data_publicacao'] = df1['data_publicacao'].dt.date\n",
+    "        df1['empresa'] = empresa # mantem padrao do nome caso tenham apelidos\n",
     "        df1 = ajusta_nomes_empresas_dataframe(df1)\n",
     "\n",
     "        # cria hash\n",
@@ -135,22 +151,6 @@
     "\n",
     "print('\\nCaptura concluída')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "683c7599",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "677ff916",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
